# personal-notebook

./: .gitignore  Dockerfile  LICENSE  MANIFEST.in  Pipfile  README.md  bot.py  classes.py  colors.py  comands.py  contacts.json  help.txt  main.py  notes.json  notes.py  notes.txt  pidskazky.py  pyproject.toml  requirements.txt  setup.py  sorted.py  test.py  test_1.py
virtual_assistant_v007/: __init__.py  bot.py  classes.py  comands.py  main.py  notes.py  sorted.py
