[tool.poetry]
name = "personal-notebook"
version = "0.1.0"
description = "My awesome description."
authors = ["Roman M <prominb@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
prompt-toolkit = "3.0.43"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
